--- a/basic/index.html
+++ b/basic/index.html
@@ -22,30 +22,35 @@
     });
 
     asyncBtn.addEventListener("click", function () {
-        // XMLHttpRequest
-        var xhr = new XMLHttpRequest();
-        // HTTP method: GET, POST, ...
-        // URL
-        // async: ture / false
-        xhr.open("GET", "http://34.217.120.25:3000", true);
-        xhr.onload = function () {
-            message.innerText = `非同步請求 load ${this.responseText}`;
-        };
-        xhr.send();
-    })
+      // XMLHttpRequest
+      var xhr = new XMLHttpRequest();
+      // HTTP method: GET, POST, ...
+      // URL
+      // async: true / false
+      xhr.open("GET", "http://34.217.120.25:3000", true);
+
+      // xhr.addEventListener('load', function() {});
+      xhr.onload = function () {
+        if (this.status === 200) {
+          message.innerText = `非同步請求 load ${this.responseText}`;
+        } else {
+          message.innerText = `非同步請求 有問題 ${this.status}`;
+        }
+      };
+      xhr.send();
+    });
 
     syncBtn.addEventListener("click", function () {
-        // XMLHttpRequest
-        var xhr = new XMLHttpRequest();
-        // HTTP method: GET, POST, ...
-        // URL
-        // async: ture / false
-        xhr.open("GET", "http://34.217.120.25:3000", false);
-        xhr.onload = function () {
-            message.innerText = `同步請求 load ${this.responseText}`;
-        };
-        xhr.send();
-    })
-
+      // XMLHttpRequest
+      var xhr = new XMLHttpRequest();
+      // HTTP method: GET, POST, ....
+      // URL
+      // async: true / false
+      xhr.open("GET", "http://34.217.120.25:3000", false);
+      xhr.onload = function () {
+        message.innerText = `同步請求 load ${this.responseText}`;
+      };
+      xhr.send();
+    });
   </script>
 </html>
